--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,7 +220,7 @@ img {
   box-shadow: 0 0 0 1px #2d3440;
 }
 
-textarea.field {
+.field-textarea {
   resize: none;
 }
 
@@ -2389,8 +2389,10 @@ textarea.field {
   grid-template-rows: 1fr;
 }
 
-.modal-form textarea {
+.modal-textarea {
   height: 149px;
+
+  resize: none;
 }
 
 .modal-button {
